# cucumat

./: README.md
cucumat/: CMakeLists.txt  __init__.py  cucumat.py  lib_wrap.py
cucumat/cuda/: cucumat.cu  cucumat_kernel.cu  cucumat_kernel.cuh
tests/: test_matrix.py
